[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Lesther Jr Llacuna <ljllacuna5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pymemcache = "^4.0.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
uvicorn = "^0.24.0.post1"
tortoise-orm = {extras = ["asyncpg"], version = "^0.20.0"}
aerich = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
