[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = "A minimal URL shortener using FastAPI"
authors = ["Lesther Jr Llacuna <ljllacuna5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pymemcache = "^4.0.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
uvicorn = "^0.24.0.post1"
pybase62 = "^1.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
mypy = "^1.7.0"
aiosqlite = "^0.19.0"
isort = "^5.13.2"
ruff = "^0.1.13"

[tool.poetry.group.test.dependencies]
httpx = "^0.26.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_app = "url_shortener.scripts:run_app"
run_lint = "url_shortener.scripts:run_lint"